# scLineagePred

./: .gitignore  README.md  pyproject.toml
DeepRUOT/: check.py  dim_pkl.py  endpoint_cluster.py  endpoint_cluster_last_tp_4types.py  plot.py  plot_v.py  train_RUOT.py  train_ruot_clone.py
DeepRUOT/DeepRUOT/: eval.py  exp.py  losses.py  models.py  train.py  utils.py
DeepRUOT/legacy/: 132188.py
autoencoder/: dataio.py  decoder_140802.py  decoder_99915.py  netmodel.py  train_model.py  utils.py
autoencoder/legacy/: decoder_114412.py  decoder_175634.py
autoencoder/models/: dgi.py  encoder_decoder.py  layers.py
classification/: class_140802.py  compare_roc_175634_official.py  compare_roc_cellrank_wot_cospar_140802.py  gan_based_ot_official_adapter.py  plot_114412.py  plot_132188.py  plot_132188_methods_heatmap_uptoday.py  plot_999155.py  plot_binary_official_methods_2d.py  train.py  train_99915_natural_bilstm.py
classification/legacy/: class_132188.py  compare_roc_day2_official_140802.py  compare_roc_official_alltime_remaining3.py  plot_132188_confusion_4methods_large.py  plot_132188_roc_4methods_panel.py  plot_99915_requested_figures.py  plot_99915_roc_4methods_clean_full.py  plot_roc.py
regression/: plot_132188_regression_roc_multitime.py  regression_140802.py  regression_99915.py  scatter.py  train.py
regression/legacy/: regression_132188.py
scLineagePred/: cli.py  legacy.py  runner.py
scLineagePred/classification/: __init__.py  plot_roc.py  train.py
scLineagePred/perturbation/: __init__.py  train.py
sclineagepred/: cli.py  legacy.py
(+27 files in other folders)
